Add PartitionFunction and PartitionScheme classes
TODO:
 - PartitionFunctionDiff
 - PartitionSchemeDiff
 - CreateFromDir
 - ScriptToDir

--- a/model/Library.csproj
+++ b/model/Library.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Models\Default.cs" />
     <Compile Include="Models\Exceptions.cs" />
     <Compile Include="Models\ForeignKey.cs" />
+    <Compile Include="Models\PartitionScheme.cs" />
+    <Compile Include="Models\PartitionFunction.cs" />
     <Compile Include="Models\Permission.cs" />
     <Compile Include="Models\Identity.cs" />
     <Compile Include="Models\Interfaces.cs" />
