Update editorconfig with maintainers preferences
Rebracer does not have a release for VS2019

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,13 @@ indent_size = 4
 [*.config]
 indent_style = space
 indent_size = 2
+
+# CSharp formatting settings:
+[*.cs]
+csharp_new_line_before_open_brace = none
+csharp_new_line_before_else = false
+csharp_new_line_before_catch = false
+csharp_new_line_before_finally = false
+csharp_new_line_before_members_in_object_initializers = true
+csharp_new_line_before_members_in_anonymous_types = true
+csharp_new_line_between_query_expression_clauses = true
