Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,4 +49,4 @@ steps:
     tag: '$(Build.BuildNumber)'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
-    assets: $(Build.ArtifactStagingDirectory)/SchemaZen.exe
+    assets: $(Build.ArtifactStagingDirectory)/**/$(buildConfiguration)/**/SchemaZen.exe
